# udi-etl-app

./: .env.example  .gitignore  README.md  pyproject.toml  run_migrate.py  run_server.py
api/: connector_schema.py  main.py  metadata_storage.py  schemas.py  tasks.py
api/routes/: connections.py
connector_plugins/: random_numbers.py
demo_files/: products.csv
docs/: ARCHITECTURE.md  USAGE.md
