[project]
name = "udi-etl-app"
version = "0.1.0"
description = "FastAPI ETL service exposing UDI connectors over HTTP, with connection + migration history metadata storage"
requires-python = ">=3.12"
dependencies = [
    "udi-connectors",
    "udi-packages",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-jose[cryptography]>=3.5.0",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.0",
    "botocore[crt]>=1.34",
]

[tool.uv.sources]
udi-connectors = { path = "../udi-connectors", editable = true }
udi-packages = { path = "../udi-packages", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH", "T20", "SIM", "RET"]
ignore = ["S101", "TRY003", "UP035", "UP045", "UP047", "UP006", "E501", "W292", "I001", "F401", "RET505", "SIM117"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.uv]
package = false
dev-dependencies = [
    "ruff>=0.5",
    "mypy>=1.10",
]
